@@ -22,15 +22,17 @@ $metabox['fields'][] = array(
 );
 
 $metabox['fields'][] = array(
-	'id'   => 'sticky_archive',
-	'name' => esc_html__( 'Stick to archive', 'tour-operator' ),
+	'id'   => 'disable_single',
+	'name' => esc_html__( 'Disable Single', 'tour-operator' ),
 	'type' => 'checkbox',
 );
 
 $metabox['fields'][] = array(
-	'id'   => 'disable_single',
-	'name' => esc_html__( 'Disable Single', 'tour-operator' ),
-	'type' => 'checkbox',
+	'id'      => 'sticky_order',
+	'name'    => esc_html__( 'Sticky order', 'tour-operator' ),
+	'type'    => 'text',
+	'default' => '0',
+	//'desc'    => esc_html__( 'Stick an item on the archive page. Add a number to order the item.', 'tour-operator' ),
 );
 
 $metabox['fields'][] = array(
